--- a/index.ipynb
+++ b/index.ipynb
@@ -45,13 +45,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "import sqlite3\n",
+    "conn = sqlite3.connect(\"./planets.db\")\n",
+    "c = conn.cursor()"
    ]
   },
   {
@@ -95,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -180,13 +181,18 @@
        "7  Neptune   dark blue"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "import pandas as pd\n",
+    "c.execute(\"\"\" select name, color from planets\"\"\")\n",
+    "df = pd.DataFrame(c.fetchall())\n",
+    "df.columns = [ x[0] for x in c.description]\n",
+    "df"
    ]
   },
   {
@@ -198,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -279,13 +285,17 @@
        "3   8  Neptune   dark blue            14   17.15      1"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "c.execute(\"\"\" select * from planets where mass > 1;\"\"\")\n",
+    "df = pd.DataFrame(c.fetchall())\n",
+    "df.columns = [ x[0] for x in c.description]\n",
+    "df"
    ]
   },
   {
@@ -376,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -401,49 +411,53 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>name</th>\n",
-       "      <th>color</th>\n",
+       "      <th>mass</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Jupiter</td>\n",
-       "      <td>orange</td>\n",
+       "      <td>317.90</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Saturn</td>\n",
-       "      <td>hazel</td>\n",
+       "      <td>95.19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Uranus</td>\n",
-       "      <td>light blue</td>\n",
+       "      <td>14.54</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Neptune</td>\n",
-       "      <td>dark blue</td>\n",
+       "      <td>17.15</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      name       color\n",
-       "0  Jupiter      orange\n",
-       "1   Saturn       hazel\n",
-       "2   Uranus  light blue\n",
-       "3  Neptune   dark blue"
+       "      name    mass\n",
+       "0  Jupiter  317.90\n",
+       "1   Saturn   95.19\n",
+       "2   Uranus   14.54\n",
+       "3  Neptune   17.15"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "c.execute(\"\"\" select name, mass from planets where num_of_moons > 10;\"\"\")\n",
+    "df = pd.DataFrame(c.fetchall())\n",
+    "df.columns = [ x[0] for x in c.description]\n",
+    "df"
    ]
   },
   {
@@ -455,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -490,15 +504,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Earth</td>\n",
-       "      <td>blue</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
        "      <td>4</td>\n",
        "      <td>Mars</td>\n",
        "      <td>red</td>\n",
@@ -511,18 +516,21 @@
        "</div>"
       ],
       "text/plain": [
-       "   id   name color  num_of_moons  mass  rings\n",
-       "0   3  Earth  blue             1  1.00      0\n",
-       "1   4   Mars   red             2  0.11      0"
+       "   id  name color  num_of_moons  mass  rings\n",
+       "0   4  Mars   red             2  0.11      0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "c.execute(\"\"\" select * from planets where num_of_moons > 1 and mass < 1;\"\"\")\n",
+    "df  = pd.DataFrame(c.fetchall())\n",
+    "df.columns = [ x [0] for x in c.description]\n",
+    "df"
    ]
   },
   {
@@ -534,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -589,13 +597,21 @@
        "2  Neptune   dark blue"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "c.execute(\"\"\" select name, color from planets where \n",
+    "                color == 'blue' OR\n",
+    "                color == 'light blue' OR\n",
+    "                color == 'dark blue';\n",
+    "            \"\"\")\n",
+    "df = pd.DataFrame(c.fetchall())\n",
+    "df.columns = [ x[0]  for x in c.description]\n",
+    "df"
    ]
   },
   {
@@ -629,7 +645,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
